syntax = "proto3";
package queue;

option go_package = "github.com/code-cell/esive/queue";

message Tick {
  int64 tick = 1;
}

message TickServicesFinished {
  int64 tick = 1;
}

message ProcessChunkMovements {
  int64 tick = 1;
  int64 chunkX = 2;
  int64 chunkY = 3;
}

message ProcessChunkMovementsRes {
  repeated int64 entities = 1;
}
